tests/positive/group.rms
GROUP(
	@"hello",
	ANY(
		VARCHAR("0-9", 2),	#This is a comment
		@"text\"",
		varchar("a-z", 1, 10)
	)
)
